# waypoint

./: .gitignore  README.md  bom.csv
case/printables/: bottom.3mf  buttons.3mf  top.3mf
firmware/: Cargo.toml
firmware/src/: lib.rs
firmware/src/data/: mod.rs
firmware/src/data/waypoints/: mod.rs
firmware/src/expander/: mod.rs
firmware/src/gnss/: mod.rs
firmware/src/haptics/: mod.rs
firmware/src/inputs/: mod.rs
firmware/src/inputs/expander/: mod.rs
firmware/src/inputs/gnss/: mod.rs
firmware/src/inputs/sensors/: imu.rs  magnetometer.rs  mod.rs
firmware/src/logic/: mod.rs  navigating.rs  selecting.rs  settings.rs  sleep.rs  template  waypoints.rs
firmware/src/navigation/: mod.rs
firmware/src/outputs/: mod.rs
firmware/src/outputs/display/: main_page.rs  mod.rs  navigate_page.rs  navigating.rs  selecting.rs  settings.rs  waypoints.rs  widgets.rs
firmware/src/outputs/haptics/: mod.rs
firmware/src/outputs/leds/: mod.rs
firmware/src/power/: mod.rs
firmware/src/sensors/: imu.rs  magnetometer.rs  mod.rs
pcb/: fp-lib-table  leds.kicad_sch  mcu_extras.kicad_sch  power.kicad_sch  sym-lib-table  waypoint.csv  waypoint.kicad_prl  waypoint.kicad_pro  waypoint.kicad_sch
pcb/libs/: aliexpress.bak  aliexpress.kicad_sym  lcsc_lib.bak  lcsc_lib.kicad_sym
pcb/libs/aliexpress.3dshapes/: GC9A01.step
pcb/libs/aliexpress.pretty/: GC9A01.kicad_mod
pcb/libs/lcsc_lib.3dshapes/: ANT-TH_KH-GPS252504-WY.step  ANT-TH_KH-GPS252504-WY.wrl  ATGM336H.STEP  CONN-TH_2P-P2.00_BX-PH2.0-2PWZ.step  CONN-TH_2P-P2.00_BX-PH2.0-2PWZ.wrl  LED-SMD_SK6812MINI-FA.step  LED-SMD_SK6812MINI-FA.wrl  LGA-12_L2.0-W2.0-H1.0-P0.50.wrl  MD-SMD_2P-LD0832AA-0126F.step  MD-SMD_2P-LD0832AA-0126F.wrl  SC-70-5_L2.1-W1.3-H1.0-LS2.1-P0.65.wrl  SON-6_L1.5-W1.0-H0.5-P0.50.wrl  SW-SMD_L6.0-W6.0-LS6.6.step  USB-C-SMD_G-SWITCH_GT-USB-7010ASV.wrl
pcb/libs/lcsc_lib.pretty/: ANT-TH_KH-GPS252504-WY.kicad_mod  CONN-SMD_PH2.0-2PWT.kicad_mod  CONN-TH_2P-P2.00_BX-PH2.0-2PWZ.kicad_mod  FL_001.kicad_mod  GPS-SMD_18P-L10.1-W9.7-P1.10-TL.kicad_mod  KEY-SMD_4P-L4.2-W3.2-P2.20-LS4.6.kicad_mod  (+18 more)
