[package]
edition = "2024"
name = "firmware"
rust-version = "1.95"
version = "0.1.0"

[[bin]]
name = "firmware"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32c6",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c6"] }

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-backtrace = { version = "0.19.0", features = [
  "defmt",
  "esp32c6",
  "panic-handler",
] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32c6"] }

critical-section = "1.2.0"
static_cell = "2.1.1"
lsm6ds3tr = "0.2.2"
iis2mdc-rs = { version = "2.0.0", default-features = false, features = ["blocking"] }
embassy-sync = "0.8.0"
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
drv2605l = "0.1.0"
embedded-hal-compat = "0.13.0"
tca9534-driver-rs = "0.1.0"
heapless = "0.9.3"
embassy-futures = "0.1.2"
nmea = { version = "0.7.0", default-features = false }
mipidsi = { version = "0.10.0", features = ["defmt"] }
embedded-graphics = { version = "0.8.2", features = ["defmt"] }
esp-hal-smartled2 = { version = "0.28.2", features = ["defmt"] }
smart-leds = "0.4.0"
display-interface-spi = "0.5.0"
embedded-hal-bus = { version = "0.3.0", features = ["defmt-03"] }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2         # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
